Change mappers' methods to static, Fix getting all conference rooms to specific organization and getting all reservations to specific conference room